# mcp-openmetadata

./: README-API.md  README.md  pyproject.toml
mcp_openmetadata/: __init__.py  utils.py
mcp_openmetadata/hosts/: cursor.py
mcp_openmetadata/server/: app.py  settings.py
mcp_openmetadata/server/tools/: __init__.py  search.py
