[project]
name = "mcp-openmetadata"
version = "0.1.0"
description = "OpenMetadata integration for FastMCP framework"
authors = [
    {name = "pfldy2850", email = "pfldy2850@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "fastmcp", "openmetadata", "metadata", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.4.1",
    "pydantic-settings>=2.8.1",
]

[project.urls]
Homepage = "https://github.com/pfldy2850/mcp-openmetadata"
Repository = "https://github.com/pfldy2850/mcp-openmetadata"
Documentation = "https://github.com/pfldy2850/mcp-openmetadata#readme"
"Bug Tracker" = "https://github.com/pfldy2850/mcp-openmetadata/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_openmetadata"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
